0.5-dev
  * Worked on adding better polarization support to correlator.fx and correlator.uvUtils
  * Updated the correlateTBN script to make full polarization support possible

0.4.2
  * Fixed tbwSpectra.py to skip over non-TBW frames at the beginning of a TBW file
  * Fixed the common.stations.geo2ecef() conversion function (Ticket #16)
  * Fixed the correlator.fx.FXMaster() function (Ticket #18)
  * Fixed a few type conversion problems in correlator._core (core.c) introduced with the new data types
  * Fixed a frequency units conversion in tbnSpectra.py
  * Improved polarization support in the FITS IDI writer
  * Fixed a sign error in the fractional delay correction of the correlator F engine
  * Improved the speed of the X Engine
  * Fixed a azimuth definition problem in astro_array.c
  * Updated the included SSMIF to the 5/18/2011 version
  * Updated the correlateTBN script to make computing XX and YY products easier

0.4.1
  * Fixed a problem with the C readers that manifests itself on 32-bit platforms
  * Modified sphinx to be more independent about version numbers and release notes
  * Added additional PyDict checks to the _gofast module
  * Modified lsl.sim.drx to zero the frame and seconds counts to make the DRX frames ICD compliant
  * Fixed a small bug in lsl.sim.tbw/tbn/drx that caused the seconds counts to be wrong

0.4.0
  * Added new robust statistical methods
  * Added Global Sky Model models to skymap
  * Added new smoothing and fitting functions to misc.mathutil
  * Added a progress bar for use with long-running applications
  * Added in new LWA-1 dipole NEC models
  * Re-worked the plotAntenna.py script to use the pre-computed dipole response fits
  * Added support for EXCITATION keywords in misc.nec_util
  * Added new gofast readers for TBW, TBN, and DRX
  * Added better polyphase filter support
  * Fixed initialization problems the various lsl.reader Frame objects
  * Fixed the TBN ring buffer